@@ -26,6 +26,7 @@ A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression fiel
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+.......P.. [ZBX-5909] fixed proxy compilation when using '--with-sqlite3' (Andris)
 ..F....... [ZBX-5904] fixed history filter by items (Eduard)
 A.F....... [ZBX-5927] fixed selectMappings returning a hash of mappings instead of an array in iconmap.get (Pavels)
 A.F....... [ZBX-5927] fixed preservekeys affecting selectSelements and selectLinks in map.get (Pavels)
